--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.3.9
 Click==7.0
 cycler==0.10.0
 Flask==1.0.2
+flask-pymongo==2.2.0
 itsdangerous==1.1.0
 gunicorn==19.9.0
 Jinja2==2.10.1
@@ -12,6 +13,7 @@ matplotlib==3.0.3
 numpy==1.16.3
 pandas==0.24.2
 pyparsing==2.4.0
+pymongo==3.7.2
 python-dateutil==2.8.0
 pytz==2019.1
 six==1.12.0
