--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bokeh==1.1.0
 certifi==2019.3.9
 Click==7.0
 cycler==0.10.0
+dnspython==1.15.0
 Flask==1.0.2
 flask-pymongo==2.2.0
 itsdangerous==1.1.0
